--- a/src/components/carousels.astro
+++ b/src/components/carousels.astro
@@ -5,9 +5,10 @@ import '../styles/carousel.scss'
 <script is:inline>
     let carousels = document.querySelectorAll('.carousel')
     carousels.forEach(function(carousel, i) {
-        i = String(!!carousel.getAttribute('data-index'))
-            .replace('true', carousel.getAttribute('data-index'))
-            .replace('false', i)
+        var dataI = parseInt(carousel.getAttribute('data-index'))
+        if (!!dataI || dataI === 0) {
+            i = dataI
+        }
 
         let leftArrow = document.createElement('a')
         leftArrow.href = `javascript:goBack(${i});`
