--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -109,7 +109,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .gradient {
-  /*  --bg-color: white; /* For browsers that do not support gradients */
+  /* For browsers that do not support gradients */
   --bg-color: transparent;
 
   height: 10px;
