--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -119,8 +119,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .btn, button {
-  min-height: 30px;
-  max-height: 50px;
+  // min-height: 30px;
+  // max-height: 50px;
 
   text-decoration: none;
   
