--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -359,8 +359,9 @@ form[method="POST"] {
     --bg-color: white;
   }
 
-  & button {
+  & :is(.btn, button) {
     width: fit-content;
+    margin-inline-start: auto;
   //   font-size: calc(11pt + 3px);
   //   padding: 9px;
   //   margin: 0 0 0 auto;
