--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ import '../styles/photos.scss'
           <input type="hidden" name="entry.1445095683" value="true" />
           <!-- add hidden Honeypot input to prevent spams -->
           <input type="hidden" name="_gotcha" style="display:none!important">
-          <button type="submit" onclick="sendMessage()">Send</button>
+          <input type="submit" class="primary" onclick="sendMessage()" value="Send">
         </form>
       </section>
     </Split>
