MAKE INFOBOX WORKING!!!

--- a/src/components/infobox.astro
+++ b/src/components/infobox.astro
@@ -1,10 +1,10 @@
 ---
 import '../styles/infobox.scss'
 ---
-<dialog id="infobox">
+<dialog id="infobox" class="infobox">
+  <a href="javascript:infobox.close()" draggable="false">
+    <img src="/assets/icons/X.svg" class="cSpan" draggable="false">
+  </a>
   <div class="infobox-inner">
-    <a href="javascript:infoBox.close()" draggable="false">
-      <img src="/assets/icons/X.svg" id="cSpan" draggable="false">
-    </a>
   </div>
 </dialog>
