--- a/src/styles/infobox.scss
+++ b/src/styles/infobox.scss
@@ -1,19 +1,38 @@
 #infobox {
+    --bg-color: white;
     --b-r: 25px;
-    --width: calc(200px - 4px);
+    --width: calc(300px - 4px);
     
     position: sticky;
-    bottom: var(--b-r);
-    left: calc((100% - var(--width)) - var(--b-r)*3);
+    top: calc(100% - var(--h, 0) - var(--b-r));
+    left: calc(100% - var(--w, 0) - var(--b-r));
     
     margin: 0;
   
     width: var(--width);
-    aspect-ratio: 16 / 9;
+    aspect-ratio: 2 / 1;
   
     border-color: var(--orig-bg-color);
+    border-radius: 5px;
+
+    box-shadow: var(--main-shadow);
   
     &[open] {
         display: inline-flex;
     }
-}  
+}
+
+.infobox-inner {
+    width: 100%;
+    height: 100%;
+}
+
+.cSpan {
+    position: absolute;
+    top: 12.5px;
+    right: 12.5px;
+/*  margin: 12.5px;  */
+    width: 25px !important;
+    aspect-ratio: 1;
+    cursor: pointer;
+}
