--- a/src/components/infobox.astro
+++ b/src/components/infobox.astro
@@ -2,9 +2,10 @@
 import '../styles/infobox.scss'
 ---
 <dialog id="infobox" class="infobox">
-  <a href="javascript:infobox.close()" draggable="false">
+  <a href="javascript:closeInfobox()" draggable="false">
     <img src="/assets/icons/X.svg" class="cSpan" draggable="false">
   </a>
   <div class="infobox-inner">
   </div>
 </dialog>
+<script src="/infobox.js"></script>
