--- a/src/styles/infobox.scss
+++ b/src/styles/infobox.scss
@@ -16,6 +16,9 @@
     border-radius: 5px;
 
     box-shadow: var(--main-shadow);
+
+    transition: opacity var(--transition-time, 1s) ease;
+    opacity: 0;
   
     &[open] {
         display: inline-flex;
