--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -174,6 +174,7 @@ button, [type="submit"], [type="button"] {
 .missiontext {
 --bg-color: white;
   margin: 25px;
+  width: -moz-fit-content;
   width: fit-content;
 
   & > .text  {
@@ -360,6 +361,7 @@ form[method="POST"] {
   }
 
   & :is(.btn, :is(button, [type="submit"], [type="button"])) {
+    width: -moz-fit-content;
     width: fit-content;
     margin-inline-start: auto;
     // font-size: calc(11pt + 3px);
