update infobox.astro bug

--- a/src/components/infobox.astro
+++ b/src/components/infobox.astro
@@ -8,4 +8,4 @@ import '../styles/infobox.scss'
   <div class="infobox-inner">
   </div>
 </dialog>
-<script src="/infobox.js"></script>
+<script src="/infobox.js" is:inline></script>
