--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -140,7 +140,9 @@ button, [type="submit"], [type="button"] {
   padding: 0.75rem 2rem;
   box-shadow: 0px 3px 29px 0px rgba(0, 0, 0, 0.06);
 
-  transition: 0.25s ease-in-out;
+  &[transition] {
+    transition: 0.25s ease-in-out;
+  }
 
   display: flex;
   text-align: center;
