--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -18,9 +18,9 @@
             max-height: 100%;
             max-width: 100%;
 
-            &:focus {
-                outline: solid black;
-            }
+        }
+        &:is(:focus, :active) {
+            outline: solid black;
         }
     }
   
