--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -13,6 +13,7 @@
     & > a {
         height: 32px;
         aspect-ratio: 1;
+        border-radius: 5px;
 
         & > img {
             max-height: 100%;
