--- a/src/styles/carousel.scss
+++ b/src/styles/carousel.scss
@@ -21,7 +21,7 @@
 
         }
         &:is(:focus, :active) {
-            outline: solid black;
+            outline: solid black 2px;
         }
     }
   
