--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/footer.scss'
+import '../styles/components/footer.scss'
 
 var siteUpdatedDate = '09/13/2023'
 var uMember = 'adarsh'
