--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/header.scss'
+import '../styles/components/header.scss'
 ---
 <a id="go2content" href="javascript:scrollToNum()">Skip to Content</a>
 <header class="header">
