--- a/src/components/infobox.astro
+++ b/src/components/infobox.astro
@@ -1,11 +1,10 @@
 ---
-import '../styles/infobox.scss'
+import '../styles/components/infobox.scss'
 ---
 <dialog id="infobox" class="infobox">
   <a href="javascript:closeInfobox()" draggable="false">
     <img src="/assets/icons/X.svg" class="cSpan" draggable="false">
   </a>
-  <div class="infobox-inner">
-  </div>
+  <div class="infobox-inner"></div>
 </dialog>
 <script src="/infobox.js" is:inline></script>
