--- a/src/pages/members/sam.astro
+++ b/src/pages/members/sam.astro
@@ -14,8 +14,7 @@ userData = leftMembers(userData)
 import '../../styles/pages/members.scss'
 ---
 <Layout title={userData.name}>
-  <section id="content"></section>
-  <main id="profile" class="profile">
+  <main id="content" class="profile">
     <section>
       <h1 id="name">{userData.name}</h1>
       <p id="bio" set:html={userData.bio}></p>
