--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -207,7 +207,7 @@ button, [type="submit"], [type="button"] {
 }
 
 main {
-  &:not(#profile) h2 {
+  &:not(.profile) h2 {
     text-transform: uppercase;
     font-weight: 400;
     font-size: 2.5rem;
