--- a/src/styles/photos.scss
+++ b/src/styles/photos.scss
@@ -47,7 +47,7 @@ ul:is(#photos, .photos) {
         &:not(:has( + li)) {
             grid-column: 2 / -2;
         }
-        &:not(:has( + li + li)) + li {
+        &:not(:has( + li + li)) + :not(:has( + li)) {
             grid-column: -2 / -1;
         }
         
