--- a/src/styles/photos.scss
+++ b/src/styles/photos.scss
@@ -47,6 +47,17 @@ ul:is(#photos, .photos) {
         height: auto;
         grid-column: span 2;
 
+        &:not(:has( + li)) {
+            grid-column-start: 3;
+            grid-column-end: -3;
+        }
+        &:not(:has( + li + li)):has( + li) {
+            grid-column-start: 2;
+            & + li {
+                grid-column-end: -2;
+            }
+        }
+
         & img {
             width: 100%;
             border-radius: 15px;
