--- a/src/styles/photos.scss
+++ b/src/styles/photos.scss
@@ -47,9 +47,9 @@ ul:is(#photos, .photos) {
         height: auto;
         grid-column: span 2;
 
-        &:not(:has( + li), :not(:has( + li + li)):has( + li) + li) {
+        &:not(:has( + li)) {
             grid-column-start: 3;
-            grid-column-end: -3;
+            // grid-column-end: -3;
         }
         &:not(:has( + li + li)):has( + li) {
             grid-column-start: 2;
