--- a/src/styles/photos.scss
+++ b/src/styles/photos.scss
@@ -47,19 +47,19 @@ ul:is(#photos, .photos) {
         height: auto;
         grid-column: span 2;
 
-        &:not(:has( + li), :not(:has( + li + li)) + li) {
-            grid-column-start: 3;
-            grid-column: span 2;
-            // grid-column-end: -3;
-        }
-        &:not(:has( + li + li)):has( + li) {
-            grid-column-start: 2;
-            grid-column: span 2;
+        // &:not(:has( + li), :not(:has( + li + li)) + li) {
+        //     grid-column-start: 3;
+        //     grid-column: span 2;
+        //     // grid-column-end: -3;
+        // }
+        // &:not(:has( + li + li)):has( + li) {
+        //     grid-column-start: 2;
+        //     grid-column: span 2;
             
-            & + li {
-                grid-column-end: -2;
-            }
-        }
+        //     & + li {
+        //         grid-column-end: -2;
+        //     }
+        // }
 
         & img {
             width: 100%;
