--- a/src/styles/photos.scss
+++ b/src/styles/photos.scss
@@ -53,8 +53,9 @@ ul:is(#photos, .photos) {
             grid-column-end: -3;
         }
         &:not(:has( + li + li)):has( + li):nth-child(3n-2) {
-            grid-column-start: 2;
-        //     grid-column: span 2;
+            // grid-column-start: 2;
+            grid-column-end: 4;
+            // grid-column: span 2;
             
             & + li {
                 grid-column-end: -2;
