--- a/src/styles/photos.scss
+++ b/src/styles/photos.scss
@@ -49,13 +49,11 @@ ul:is(#photos, .photos) {
 
         &:not(:has( + li)):not(li:has( + li + li) + li):nth-child(3n-2) {
             grid-column-start: 3;
-            // grid-column: span 2;
             grid-column-end: -3;
         }
         &:not(:has( + li + li)):has( + li):nth-child(3n-2) {
-            // grid-column-start: 2;
-            grid-column-end: 4;
-            // grid-column: span 2;
+            grid-column-start: 2;
+            grid-column-end: span 2;
             
             & + li {
                 grid-column-end: -2;
