--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -34,7 +34,7 @@ import '../styles/photos.scss'
         </TinySplit>
       </section>
     </Split>
-    <div hHr></div>
+    <div class="hHr"></div>
     <Split>
       <section>
         <h1>S.A.V.E Foundation</h1>
@@ -60,7 +60,7 @@ import '../styles/photos.scss'
         </TinySplit>
       </section>
     </Split>
-    <div hHr></div>
+    <div class="hHr"></div>
     <Split>
       <span class="vHr"></span>
       <section>
@@ -87,7 +87,7 @@ import '../styles/photos.scss'
         </TinySplit>
       </section> -->
     </Split>
-    <div hHr></div>
+    <div class="hHr"></div>
     <!-- <Split>
       <section>
         <h1>Project Title</h1>
