debug header.astro

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -50,10 +50,10 @@ import '../styles/components/header.scss'
       if (link.endsWith('/') && link !== '/') {
         link = link.substring(0, link.length-1)
       }
-      if (!link.startsWith('/') && link.includes('/')) {
-        link = `/${link.split('/')[0]}`
-      }
       alert(`${link} ?= ${path}`)
+    }
+    if (!path.startsWith('/') && path.includes('/')) {
+      path = `/${path.split('/')[0]}`
     }
     if (link === path) a.classList.add('primary')
   })
