--- a/src/styles/scrollAnimations.scss
+++ b/src/styles/scrollAnimations.scss
@@ -15,7 +15,7 @@ main:not(.profile) > * {
         &:not(.split) > *:not(.hHr) {
             @include animations;
         }
-        .hHr:not( ~ .split) {
+        .hHr:not(:has( ~ .split)) {
             @include animations;
         }
         &.split > *:not(.vHr) {
