--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import Hero from '../layouts/Hero.astro'
 import '../styles/pages/portal.scss'
 ---
 <Layout title="Member Portal">
