--- a/src/pages/portal/landing.astro
+++ b/src/pages/portal/landing.astro
@@ -1,4 +1,5 @@
 ---
 import PortalContent from '../../components/portal/landing.astro'
+import Hero from '../layouts/Hero.astro'
 ---
 <PortalContent />
